# aserdev-settings

./: CMakeLists.txt  Makefile  PKGBUILD  README.md  app-menu.ui  app-menu.xml  aser-settings  aser-settings.desktop  common.c  common.h  hypr.c  hypr.h  main.c  pages.h
.github/workflows/: main.yml
pages/: appearance.c  appearance.h  audio.c  audio.h  binds.c  binds.h  clipboard.c  clipboard.h  config.c  config.h  defaultapps.c  defaultapps.h  devices.c  devices.h  disks.c  disks.h  packages.c  packages.h  rofi.c  rofi.h  runcommand.c  runcommand.h  screenrec.c  screenrec.h  systeminfo.c  systeminfo.h  users.c  users.h
